se esta consumiendo una api de climas

--- a/climas-angular/src/index.html
+++ b/climas-angular/src/index.html
@@ -5,6 +5,7 @@
   <title>ClimasAngular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/Users/admin/Desktop/Mis Proyectos/climas-app/climas-angular/src/styles.scss"> <!-- Ruta a tu archivo CSS -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
